# Backend-Starter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
prueba/: .gitignore  README.md
src/backend_starter/: cli.py  generator.py  templates.py
src/backend_starter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/backend_starter/templates/: ai.py  basic.py  command_line.py  fastapi.py
