[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-starter"
version = "0.4.0"
description = "CLI tool to generate backend project structures."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Arturo Sanma" }
]
license = { text = "MIT" }

[project.scripts]
backend-starter = "backend_starter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
